# ChangeLog for dev-ruby/tzinfo
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.40 2009/11/11 03:13:17 tcunha Exp $

  11 Nov 2009; Tiago Cunha <tcunha@gentoo.org> tzinfo-0.3.13.ebuild:
  stable sparc, bug 282207

*tzinfo-0.3.15 (27 Oct 2009)

  27 Oct 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +tzinfo-0.3.15.ebuild:
  Version bump.

  25 Oct 2009; Markus Meier <maekke@gentoo.org> tzinfo-0.3.13.ebuild:
  amd64/x86 stable, bug #282207

  29 Aug 2009; nixnut <nixnut@gentoo.org> tzinfo-0.3.13.ebuild:
  ppc stable #282207

*tzinfo-0.3.14 (21 Aug 2009)

  21 Aug 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +tzinfo-0.3.14.ebuild:
  Version bump.

  13 Jun 2009; Hans de Graaff <graaff@gentoo.org> -tzinfo-0.3.11.ebuild,
  -tzinfo-0.3.12.ebuild, tzinfo-0.3.13.ebuild:
  Remove old versions. Add ~alpha keyword to latest version, closing
  #272787. Thanks to Yuta Satoh for testing.

  19 May 2009; Brent Baude <ranger@gentoo.org> tzinfo-0.3.13.ebuild:
  keyworded ~arch for ppc64, bug 270420

  04 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  tzinfo-0.3.13.ebuild:
  Fix src_test when Ruby 1.9 is not present.

  20 Apr 2009; Markus Meier <maekke@gentoo.org> tzinfo-0.3.12-r1:
  x86 stable, bug #266520

  20 Apr 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  files/tzinfo.gemspec:
  Fix fake gemspec.

  20 Apr 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  +files/tzinfo.gemspec, tzinfo-0.3.13:
  Install for Ruby 1.9 too, add tests for both versions, install a fake
  gemspec for both versions.

  19 Apr 2009; Tiago Cunha <tcunha@gentoo.org> tzinfo-0.3.12-r1.ebuild:
  stable sparc, bug 266520

  18 Apr 2009; Thomas Anderson <gentoofan23@gentoo.org>
  tzinfo-0.3.12-r1.ebuild:
  stable amd64, bug 266520

  18 Apr 2009; nixnut <nixnut@gentoo.org> tzinfo-0.3.12-r1.ebuild:
  ppc stable #266520

*tzinfo-0.3.13 (17 Apr 2009)

  17 Apr 2009; Diego E. Pettenò <flameeyes@gentoo.org>