@@ -1,49 +1,0 @@
-# Copyright 1999-2009 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tzinfo/tzinfo-0.3.12-r1.ebuild,v 1.5 2009/04/20 20:06:26 maekke Exp $
-
-inherit ruby
-
-DESCRIPTION="Library to provide daylight-savings aware transformations between timezones"
-HOMEPAGE="http://tzinfo.rubyforge.org/"
-SRC_URI="mirror://rubyforge/${PN}/${P}.tar.gz"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="amd64 ppc sparc x86 ~x86-fbsd"
-IUSE="doc test"
-
-RDEPEND=""
-DEPEND="doc? ( dev-ruby/rake )
-	test? ( dev-ruby/rake )"
-
-USE_RUBY="ruby18"
-
-src_unpack() {
-	unpack ${A}
-
-	# The package has all the files executable, probably coming from
-	# Windows.
-	find "${S}" -type f -perm +111 -exec chmod -x {} +
-}
-
-src_compile() {
-	if use doc; then
-		rake rerdoc || die "rake rerdoc failed"
-	fi
-}
-
-src_test() {
-	rake test || die "rake test failed"
-}
-
-src_install() {
-	cd "${S}"/lib
-	doruby -r * || die "doruby failed"
-
-	if use doc; then
-		dohtml -r "${S}"/doc/* || die "dohtml failed"
-	fi
-
-	dodoc "${S}"/CHANGES "${S}"/README || die "dodoc failed"
-}
