@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/tzinfo
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.40 2009/11/11 03:13:17 tcunha Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/tzinfo/ChangeLog,v 1.41 2009/12/15 18:32:49 flameeyes Exp $
+
+*tzinfo-0.3.15-r1 (15 Dec 2009)
+
+  15 Dec 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  -tzinfo-0.3.12-r1.ebuild, -tzinfo-0.3.14.ebuild, +tzinfo-0.3.15-r1.ebuild:
+  Bump to fakegem and clean up older versions.
 
   11 Nov 2009; Tiago Cunha <tcunha@gentoo.org> tzinfo-0.3.13.ebuild:
   stable sparc, bug 282207
